--- a/README.Rmd
+++ b/README.Rmd
@@ -16,12 +16,21 @@ knitr::opts_chunk$set(
 
 # powers
 
-The goal of powers is to ...
+The goal of powers is to perform basic computations on numerical vectors.
+
+This package has four exported functions: `square()`, `cube()`, `box_cox()` and `my_log()`.
+There is one internal function `pow()` which these four functions depend on.
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+In this section I will give some examples for each functions.
 
+**(1)** `square(x,na.omit)`
+This function squares a vector. 
+
+`x` is the vector to be squared. 
+
+`na.omit` is whether or not to remove NAs, the default is FALSE.
 ```{r example}
 ## basic example code
 ```
