--- a/vignettes/my_vignette.Rmd
+++ b/vignettes/my_vignette.Rmd
@@ -1,58 +1,46 @@
 ---
-title: "Vignette Title"
-author: "Vignette Author"
+title: "Using the `powers` package"
+author: "Xinzhe Dong"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Using the `powers` package}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
 
-Vignettes are long form documentation commonly included in packages. Because they are part of the distribution of the package, they need to be as compact as possible. The `html_vignette` output type provides a custom style sheet (and tweaks some options) to ensure that the resulting html is as small as possible. The `html_vignette` format:
+__Note__: This package is just for learning purpose.
 
-- Never uses retina figures
-- Has a smaller default figure size
-- Uses a custom CSS stylesheet instead of the default Twitter Bootstrap style
+Want squares, cubes, box cox and log transformation? Easy. Loading the `powers` package! 
 
-## Vignette Info
-
-Note the various macros within the `vignette` section of the metadata block above. These are required in order to instruct R how to build the vignette. Note that you should change the `title` field and the `\VignetteIndexEntry` to match the title of your vignette.
-
-## Styles
-
-The `html_vignette` template includes a basic CSS theme. To override this theme you can specify your own CSS in the document metadata as follows:
-
-    output: 
-      rmarkdown::html_vignette:
-        css: mystyles.css
-
-## Figures
-
-The figure sizes have been customised so that you can easily put two images side-by-side. 
-
-```{r, fig.show='hold'}
-plot(1:10)
-plot(10:1)
+```{r}
+library(powers)
 ```
 
-You can enable figure captions by `fig_caption: yes` in YAML:
-
-    output:
-      rmarkdown::html_vignette:
-        fig_caption: yes
-
-Then you can use the chunk option `fig.cap = "Your figure caption."` in **knitr**.
-
-## More Examples
-
-You can write math expressions, e.g. $Y = X\beta + \epsilon$, footnotes^[A footnote here.], and tables, e.g. using `knitr::kable()`.
-
-```{r, echo=FALSE, results='asis'}
-knitr::kable(head(mtcars, 10))
+```{r}
+num_vec <- c(1:10)
+square(num_vec)
+cube(num_vec)
+box_cox(num_vec,4,6)
+my_log(num_vec,2)
 ```
 
-Also a quote using `>`:
+`apply`-family friendly, too!
 
-> "He who gives up [code] safety for [code] speed deserves neither."
-([via](https://twitter.com/hadleywickham/status/504368538874703872))
+```{r}
+my_list <- list(1:10, 0.5, -0.7)
+## So base-R-boring!
+lapply(my_list, function(x) x^2)
+## Use powers instead!
+lapply(my_list, square)
+lapply(my_list, cube)
+```
+
+It even comes with the ability to omit NA!
+
+```{r}
+num_vec <- c(1:10,NA)
+square(num_vec,na.omit = TRUE)
+```
+
+Wow!!!
