--- a/README.Rmd
+++ b/README.Rmd
@@ -16,14 +16,14 @@ knitr::opts_chunk$set(
 
 # powers
 
-The goal of powers is to perform basic computations on numerical vectors.
+The goal of the `powers` package is to perform basic computations on numerical vectors.
 
 This package has four exported functions: `square()`, `cube()`, `box_cox()` and `my_log()`.
 There is one internal function `pow()` which these four functions depend on. These fours fucntions only work for numerical input.
 
-### Examples
+### Description & Examples
 
-##### In this section I will give some examples for each functions. 
+##### In this section I will explain the arguments of each function and give some examples for each function. 
 
 First, load my `powers` package.
 ```{r}
@@ -39,7 +39,9 @@ library(powers)
 ```{r example1}
 num_vec <- c(0, -4.6, 3.4, NA)
 square(num_vec)
+
 square(num_vec, na.omit=TRUE)
+
 num_vec2 <- c(0, -4.6, 3.4, "a")
 square(num_vec2)
 ```
@@ -52,12 +54,15 @@ square(num_vec2)
 
 ```{r example2}
 cube(num_vec)
+
 cube(num_vec, na.omit=TRUE)
+
 num_vec2 <- c(0, -4.6, 3.4, "a")
 cube(num_vec2)
 ```
 
-**(3)** The function`box_cox(y, lambda1, lambda2, na.omit)` calculate the box cox transform of a vector.
+**(3)** The function`box_cox(y, lambda1, lambda2, na.omit)` calculate the box cox transform of a vector. Here is the formula of the transformation:
+
 ![cox box](https://user-images.githubusercontent.com/31666152/33244401-2e663790-d2ab-11e7-8273-ac8e4bc25d50.png)
 *(formula source: wikipedia)*
 
@@ -65,16 +70,19 @@ cube(num_vec2)
 
 * `lambda1` is the first parameter of the transformation, range from -5 to 5.
 
-* `lambda2` is the second parameter of the transformation, lambda2 in introduced for negative
-values of y, and is greater than -y.
+* `lambda2` is the second parameter of the transformation, lambda2 is introduced for negative
+values of y, it must be greater than -y.
 
 * `na.omit` is whether or not to remove NAs, the default is FALSE.
 
 ```{r example3}
 num_vec <- c(0, -4.6, 3.4, NA)
 box_cox(num_vec,4,6) # not omit NA
+
 box_cox(num_vec,4,6,na.omit=TRUE) # omit NA
+
 box_cox(num_vec,4,2,na.omit=TRUE) # lambda2 too small
+
 box_cox(num_vec,6,2,na.omit=TRUE) # lambda1 >5
 
 num_vec2 <- c(0, -4.6, 3.4, "a")
@@ -94,9 +102,12 @@ box_cox(num_vec2,4,6)
 ```{r example4}
 num_vec <- c(0, 8,64,NA)
 my_log(num_vec,2) # not omit NA
+
 my_log(num_vec,2, na.omit = TRUE) # omit NA
+
 num_vec1 <- c(0, 4.6, 900000000000000000)
 my_log(num_vec1,1.5) # can not calculate x > base^100
+
 my_log(-10,2) # x needs to be greater than or equal to 0
 
 num_vec2 <- c(0, -4.6, 3.4, "a")
