--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ The goal of the `powers` package is to perform basic computations on numerical v
 This package has four exported functions: [`square()`](https://github.com/hannahdxz/powers/blob/master/R/square.R), [`cube()`](https://github.com/hannahdxz/powers/blob/master/R/cube.R), [`box_cox()`](https://github.com/hannahdxz/powers/blob/master/R/box%20cox.R) and [`my_log()`](https://github.com/hannahdxz/powers/blob/master/R/my_log.R).
 There is one internal function [`pow()`](https://github.com/hannahdxz/powers/blob/master/R/pow.R) which these four functions depend on. 
 
-These fours fucntions only work for numerical input. When the input is of other type, an "invalid input" message will be returned.
+These four functions only work for numerical input. When the input is of other type, an "invalid input" message will be returned.
 
 ### Description & Examples
 
@@ -55,6 +55,7 @@ square(num_vec2)
 * `na.omit` is whether or not to remove NAs, the default is FALSE.
 
 ```{r example2}
+num_vec <- c(0, -4.6, 3.4, NA)
 cube(num_vec)
 
 cube(num_vec, na.omit=TRUE)
@@ -65,7 +66,7 @@ cube(num_vec2)
 
 **(3)** The function`box_cox(y, lambda1, lambda2, na.omit)` calculate the box cox transform of a vector. Here is the formula of the transformation:
 ![cox box](https://user-images.githubusercontent.com/31666152/33244401-2e663790-d2ab-11e7-8273-ac8e4bc25d50.png)
-*(formula source: wikipedia)*
+*(formula source: [wikipedia](https://en.wikipedia.org/wiki/Power_transform#Box.E2.80.93Cox_transformation))*
 
 * `y` is the vector to be transformed.
 
