--- a/README.Rmd
+++ b/README.Rmd
@@ -102,6 +102,7 @@ box_cox(num_vec2,4,6)
 * Note: This function can only calculate the log transformation of x in the range: base^(-100) <= x <= base^100
 
 ```{r example4}
+my_log(exp(7))
 num_vec <- c(0, 8,64,NA)
 my_log(num_vec,2) # not omit NA
 
